test/indexOutOfBounds11.slq

def main(){
	x:=0:int[3];
	x[-1]=1:ğ”¹; // error
	return x;
}
